Przetłumaczone rodziny roślin
+ cleanup

--- a/crop_rotator/strona/templates/strona/all_plant_families.html
+++ b/crop_rotator/strona/templates/strona/all_plant_families.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-{{ items.all_plants }}
+<title>{{ items.all_plants }}</title>
 {% endblock %}
 
  <!-- Nullifikator bocznego menu z base.html Nie ruszaj tego, jak i end-taga!-->
