--- a/crop_rotator/templates/base_bak.html
+++ b/crop_rotator/templates/base_bak.html
@@ -68,8 +68,15 @@
         </ul>
         <!-- NAVBAR MENU ZMIANY JEZYKA -->
         <div class="langmenu float-center">
-        <li class="nav-item">
-            <img id={% if items.lang_flag_id == "lang_flag_pl" %}"lang_flag_en" src="{{ items.lang_flag_en.url }}" {% else %}"lang_flag_pl" src="{{ items.lang_flag_pl.url }}"{% endif %} height="20" width="35" />
+        <li class="nav-item dropdown list-unstyled">
+            <ul class="languagepicker roundborders large">
+                <li ><img src="{{ items.lang_flag.url }}" height="20" width="35" /></li>
+                <li>
+                  {% for lang_id, lang_flag in langs %}
+                   <img id="{{ lang_id }}" src="/media/{{ lang_flag }}" height="20" width="35" />
+                  {% endfor %}
+                </li>
+            </ul>
         </li>
 </div>
         <!-- KONIEC MENU ZMIANY JEZYKA -->
