--- a/crop_rotator/templates/base.html
+++ b/crop_rotator/templates/base.html
@@ -56,23 +56,21 @@
             <a class="nav-link " href="{% url 'my_plans' %}">{{ items.my_plans }}</a>
           </li>
           {% endif %}
-        <li>
-        <button class="btn btn-light">
+        <li class="nav-item">
             {% if user.is_authenticated %}
-              <a class="btn btn-link-4 btn-light head-foot" href="{% url 'logout' %}">{{ items.logout }} {{ user.username }}</a>
+              <a class="nav-link" href="{% url 'logout' %}">{{ items.logout }} {{ user.username }}</a>
             {% else %}
-              <a class="btn btn-link-4 btn-light" href="{% url 'logger' %}">{{ items.login }}</a>
+              <a class="nav-link" href="{% url 'logger' %}">{{ items.login }}</a>
             {% endif %}
         </li>
-
-        </ul>
-        <!-- NAVBAR MENU ZMIANY JEZYKA -->
-        <div class="langmenu float-center">
         <li class="nav-item">
-            <img id={% if items.lang_flag_id == "lang_flag_pl" %}"lang_flag_en" src="{{ items.lang_flag_en.url }}" {% else %}"lang_flag_pl" src="{{ items.lang_flag_pl.url }}"{% endif %} height="20" width="35" />
+          <button class="btn btn-dark">
+            <img class="nav-image" id={% if items.lang_flag_id == "lang_flag_pl" %}"lang_flag_en" src="{{ items.lang_flag_en.url }}" {% else %}"lang_flag_pl" src="{{ items.lang_flag_pl.url }}"{% endif %} height="20" width="35" />
+          </button>
         </li>
-</div>
-        <!-- KONIEC MENU ZMIANY JEZYKA -->
+        </ul>
+
+
 
       </div>
     </nav>
