Głębokie tłumaczenia i poprawki
Zdaje się, że wszystko co pominąłem wcześniej...

--- a/crop_rotator/strona/templates/strona/about.html
+++ b/crop_rotator/strona/templates/strona/about.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-<title>Wszystkie aktualności - Roboczy</title>
+<title>{{ items.about }}</title>
 {% endblock %}
 
  <!-- Nullifikator bocznego menu z base.html Nie ruszaj tego, jak i end-taga!-->
