--- a/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
@@ -5,7 +5,7 @@
   {% if allelopatic %}
     {% shallow_list step_no=step.order search_by=crop.id from_context=allelopatic as allelopaticity %}
     {% if allelopaticity %}
-      <p>Konflikt na tle allelopatycznym. {{ crop.name }} szkodzi {{ allelopaticity.name }}!</p>
+      <p>{{ translatables.allelopatic_conflict }}. {{ crop.name }} {{ translatables.harms }} {{ allelopaticity.name }}!</p>
     {% endif %}
   {% endif %}
 
@@ -32,9 +32,9 @@
 
   <p><b><a href="{% url 'crop' crop.id %}">{{ crop.name }}</a></b><button class="show_properties2" value="2">Info</button></p>
   <div class="hidden_properties">
-    <p>Rodzina: <a href="{% url 'family' crop.family.id %}">{{ crop.family }}</a></p>
+    <p>{{ translatables.family }}: <a href="{% url 'family' crop.family.id %}">{{ crop.family }}</a></p>
     {% if crop.descr %}
-     <p>Uwagi: {{ crop.descr }}
+     <p>{{ translatables.notes }}: {{ crop.descr }}
     {% endif %}
     {% if crop.image %}
      <p><img src="{{ crop.image.url }}" alt="crop_image" height="200" width="auto"></img></p>
