--- a/crop_rotator/strona/templates/strona/crop.html
+++ b/crop_rotator/strona/templates/strona/crop.html
@@ -22,7 +22,8 @@
             {% if crop.image %}<!--jeśli jest link to go wyświetl -->
                 <br/>
                 <img class="img-fluid" src="{{ crop.image.url }}" width=50% height=auto />
-
+                <br>
+                <span><b>{{ translatables.image_source }}: {{ crop.image_source.part1 }}</b></span>
             {% endif %}
             <br />
             <p>{{ translatables.family }}: <a href="{% url 'family' crop.family.id %}">{{ family }}</a></p>
