--- a/crop_rotator/strona/templates/strona/crop.html
+++ b/crop_rotator/strona/templates/strona/crop.html
@@ -23,7 +23,7 @@
                 <br/>
                 <img class="img-fluid" src="{{ crop.image.url }}" width=50% height=auto />
                 <br>
-                <span><b>{{ translatables.image_source }}: {{ crop.image_source.part1 }}</b></span>
+                <span><b>{{ translatables.image_source }}: {% if crop.image_source.link  %}<a href="{{ crop.image_source.link }}"> {% endif %}{{ crop.image_source.part1 }}</b>{% if crop.image_source.link %}</a>{% endif %}</span>
             {% endif %}
             <br />
             <p>{{ translatables.family }}: <a href="{% url 'family' crop.family.id %}">{{ family }}</a></p>
@@ -33,7 +33,7 @@
             {% endfor %}
             <p>{{ translatables.sources }}:</p>
               {% for source in sources %}
-                <p>({{ forloop.counter }}) {{ source.at_data_string.part1 }}
+                <p>({{ forloop.counter }}){{ source.at_data_string.part1 }}
                   {% if source.pages_to %}pp. {{ source.pages_from }}-{{ source.pages_to }}
                   {% else %} p.{{ source.pages_from }}.
                   {% endif %} </p>
