Kapustowate w db, poprawa wyglądu stron indywidualnych
Nazwy łacińskie widoczne, Wyróżnione strączkowe w wersji angielskiej.

--- a/crop_rotator/strona/templates/strona/crop.html
+++ b/crop_rotator/strona/templates/strona/crop.html
@@ -17,6 +17,7 @@
         <div class="col-md-12 blog-main">
           <div class="container">
             <h1 class="text-center pt-3 ">{{ crop.name }}</h1>
+            <h4 class="text-center pt-2">{{ crop.latin_name }}</h4>
             <h4 class="pt-2">{{ crop.pubdate_short }}</h4>
             <hr />
             {% if crop.image %}<!--jeśli jest link to go wyświetl -->
