--- a/crop_rotator/strona/templates/strona/family.html
+++ b/crop_rotator/strona/templates/strona/family.html
@@ -17,7 +17,8 @@
       <div class="row">
         <div class="col-md-12 blog-main">
           <div class="container">
-            <h1 class="text-center pt-3 ">{{ family.name }}</h1>
+            <h1 class="text-center pt-3">{{ family.name }}</h1>
+            <h4 class="text-center pt-2">{{ family.latin_name }}</h4>
             <h4 class="pt-2">{{ family.pubdate_short }}</h4>
             <hr />
             {% if family.image %}<!--jeśli jest link to go wyświetl -->
