--- a/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
@@ -19,11 +19,6 @@
     {% include 'strona/plan_parts/deep_properties.html' %}
   {% endif %}
 
-  {% if interactions_t %}
-    {% complex_list step_no=step.order search_by=crop.id subject_type=1 from_context=interactions_t as complexity %}
-    {% include 'strona/plan_parts/deep_properties.html' %}
-  {% endif %}
-
   {% if f_interactions %}
     {% complex_list step_no=step.order search_by=crop.id subject_type=1 from_context=f_interactions as complexity %}
     {% include 'strona/plan_parts/deep_properties.html' %}
@@ -34,8 +29,20 @@
     {% include 'strona/plan_parts/deep_properties.html' %}
   {% endif %}
 
+
+  {% if interactions_t %}
+    {% complex_list step_no=step.order search_by=crop.id subject_type=1 from_context=interactions_t as complexity %}
+    {% include 'strona/plan_parts/deep_properties.html' %}
+  {% endif %}
+
+
   {% if f_interactions_t %}
     {% complex_list step_no=step.order search_by=crop.id subject_type=1 from_context=f_interactions_t as complexity %}
+    {% include 'strona/plan_parts/deep_properties.html' %}
+  {% endif %}
+
+  {% if t_interactions %}
+    {% complex_list step_no=step.order search_by=crop.id subject_type=1 from_context=t_interactions as complexity %}
     {% include 'strona/plan_parts/deep_properties.html' %}
   {% endif %}
 
