Dodano tryb szybkiego planowania
Mocno oszczędzamy moc obliczeniową.

--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -48,6 +48,7 @@
                {{ translatables.publish }}</button>{{ translatables.publish_text }} *{{ translatables.publish_onhover }}
              </p></form>
             {% endif %}
+            <button class="button btn btn-light btn-sm"><a href="">$Ewaluacja</a></button>*$ Analizuje plan pod kątem błędów i kolizji.
             {% endif %}
 
             {% if cr_len_warning %}
