Dodawanie śródplonu do formularza i wzornika "step"

--- a/crop_rotator/strona/templates/strona/step.html
+++ b/crop_rotator/strona/templates/strona/step.html
@@ -30,6 +30,8 @@
               że ta opcja poprawia kulturę gleby i sam rolnik ma dociec, który nawóz będzie najlepszy (uproszczenie programu).-->
               <p>{{ translatables.early_crop }}: {{ form.early_crop }}; {{ translatables.add_fertilizer }}: {{ form.add_manure_early }} *{{ translatables.add_fertilizer_onhover }}</p>
               <p>{{ translatables.destroy_early_crop }}: {{ form.is_early_crop_destroy }}</p>
+              <p>{{ translatables.middle_crop }}: {{ form.middle_crop }}; {{ translatables.add_fertilizer }}: {{ form.add_manure_middle }} *{{ translatables.add_fertilizer_onhover }}</p>
+              <p>{{ translatables.destroy_middle_crop }}: {{ form.is_middle_crop_destroy }}</p>
               <p>{{ translatables.late_crop }}: {{ form.late_crop }}; {{ translatables.add_fertilizer }}: {{ form.add_manure_late }} *{{ translatables.add_fertilizer_onhover }}</p>
               <p>{{ translatables.destroy_late_crop }}: {{ form.is_late_crop_destroy }}</p>
               <!--Zrób coś, żeby wykrywał, że user dodał nawóz do obydwu kroków i informował go o ryzyku przenawożenia.
