--- a/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
@@ -58,7 +58,7 @@
      <p>{{ translatables.notes }}: {{ crop.descr }}
     {% endif %}
     {% if crop.image %}
-     <p><img src="{{ crop.image.url }}" alt="crop_image" height="200" width="auto"></img></p>
+     <p><img src="{{ crop.image.url }}" alt="crop_image" height="auto" width="200"></img></p>
     {% endif %}
   </div>
 </div>
